[samples] add 'exit_on_success' option in zadig.ini
* Closes #13

--- a/examples/zadig.ini
+++ b/examples/zadig.ini
@@ -3,6 +3,8 @@
 [general]
   # Start application in advanced mode (default = false)
   advanced_mode = true
+  # Exit application upon successful driver installation (default = false)
+  exit_on_success = false
   # Log level (0=debug, 1=info, 2=warning, 3=error)
   log_level = 0
   
