[misc] update solution for Visual Studio 2013 Community Edition
* Also fix MinGW32 build
* Also improve error reporting for embedder when ran from VS
* Also remove the need for MFC

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 *.vcxproj*      eol=crlf
 *.inf.in        eol=crlf
 *.rc            eol=crlf
+*.def           eol=crlf
 .gitattributes  export-ignore
 .gitignore      export-ignore
 *.creole        export-ignore
