[core] more refactoring
* Use PF_ calls everywhere
* Add libwdi_i.h header
* Fix a possible Zadig crash when device description is empty
* Also set default Zadig log level to debug
* Also fix a MinGW32 build issue

--- a/libwdi/.msvc/libwdi_static.vcxproj
+++ b/libwdi/.msvc/libwdi_static.vcxproj
@@ -175,6 +175,7 @@ embedder embedded.h</Command>
     <ClInclude Include="..\..\msvc\config.h" />
     <ClInclude Include="..\installer.h" />
     <ClInclude Include="..\libwdi.h" />
+    <ClInclude Include="..\libwdi_i.h" />
     <ClInclude Include="..\logging.h" />
     <ClInclude Include="..\msapi_utf8.h" />
     <ClInclude Include="..\mssign32.h" />
