--- a/libwdi/.msvc/libwdi_dll.vcxproj.filters
+++ b/libwdi/.msvc/libwdi_dll.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClInclude Include="..\mssign32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\libwdi_i.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libwdi.def">
