--- a/libwdi/.msvc/libwdi_static.vcxproj
+++ b/libwdi/.msvc/libwdi_static.vcxproj
@@ -186,6 +186,8 @@ embedder embedded.h</Command>
     <None Include="..\libusb0.cat.in" />
     <None Include="..\libusb0.inf.in" />
     <None Include="..\libusbk.cat.in" />
+    <None Include="..\usbser.cat.in" />
+    <None Include="..\usbser.inf.in" />
     <None Include="..\winusb.cat.in" />
     <None Include="..\winusb.inf.in" />
     <None Include="..\libusbk.inf.in" />
