--- a/libwdi/.msvc/libwdi_static.vcxproj
+++ b/libwdi/.msvc/libwdi_static.vcxproj
@@ -173,6 +173,7 @@ embedder embedded.h</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\msvc\config.h" />
+    <ClInclude Include="..\stdfn.h" />
     <ClInclude Include="..\installer.h" />
     <ClInclude Include="..\libwdi.h" />
     <ClInclude Include="..\libwdi_i.h" />
