--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,8 +23,8 @@ configuration:
   - Release
 
 install:
-  - curl -o libusb-win32-bin-1.2.6.0.zip -L "http://downloads.sourceforge.net/project/libusb-win32/libusb-win32-releases/1.2.6.0/libusb-win32-bin-1.2.6.0.zip?r=https%3A%2F%2Fsourceforge.net%2Fprojects%2Flibusb-win32%2F&ts=1471420545&use_mirror=pilotfiber"
-  - curl -o libusbK-3.0.7.0-bin.7z -L "http://downloads.sourceforge.net/project/libusbk/libusbK-release/3.0.7.0/libusbK-3.0.7.0-bin.7z?r=https%3A%2F%2Fsourceforge.net%2Fprojects%2Flibusbk%2Ffiles%2FlibusbK-release%2F3.0.7.0%2F&ts=1471420694&use_mirror=pilotfiber"
+  - curl -o libusb-win32-bin-1.2.6.0.zip -L http://files.akeo.ie/appveyor/libwdi/libusb-win32-bin-1.2.6.0.zip
+  - curl -o libusbK-3.0.7.0-bin.7z -L http://files.akeo.ie/appveyor/libwdi/libusbK-3.0.7.0-bin.7z
   - 7z x libusb-win32-bin-1.2.6.0.zip
   - 7z x libusbK-3.0.7.0-bin.7z
   - dir
