--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,25 +9,43 @@ init:
       }
   - git config --global core.autocrlf input
 
+environment:
+  global:
+    PLATFORMTOOLSET: v140
+    BITS: 32
+  matrix:
+    - CONFIGURATION: Release
+      COMPILER: MinGW
+      PLATFORM: i686
+    - CONFIGURATION: Release
+      COMPILER: MinGW
+      PLATFORM: x86_64
+    - CONFIGURATION: Debug
+      COMPILER: MSVC15
+      PLATFORM: Win32
+    - CONFIGURATION: Debug
+      COMPILER: MSVC15
+      PLATFORM: x64
+    - CONFIGURATION: Release
+      COMPILER: MSVC15
+      PLATFORM: Win32
+    - CONFIGURATION: Release
+      COMPILER: MSVC15
+      PLATFORM: x64
+
 build:
   project: libwdi.sln
   parallel: true
   verbosity: detailed
-
-platform:
-  - Win32
-  - x64
-
-configuration:
-  - Debug
-  - Release
 
 install:
   - curl -o libusb-win32-bin-1.2.6.0.zip -L http://files.akeo.ie/appveyor/libwdi/libusb-win32-bin-1.2.6.0.zip
   - curl -o libusbK-3.0.7.0-bin.7z -L http://files.akeo.ie/appveyor/libwdi/libusbK-3.0.7.0-bin.7z
   - 7z x libusb-win32-bin-1.2.6.0.zip
   - 7z x libusbK-3.0.7.0-bin.7z
-  - dir
+  - if [%PLATFORM%]==[x86_64] set BITS=64
+  - if [%PLATFORM%]==[x86_64] set EXTRA_OPTS=--disable-32bit
 
 build_script:
-  - msbuild "libwdi.sln" /m /p:BuildMacros="LIBUSB0_DIR=\"c:/projects/libwdi/libusb-win32-bin-1.2.6.0\";LIBUSBK_DIR=\"c:/projects/libwdi/libusbK-3.0.7.0-bin/bin\"" /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+  - if [%COMPILER%]==[MSVC15] msbuild libwdi.sln /m /p:Configuration=%CONFIGURATION%,Platform=%PLATFORM%,BuildMacros="LIBUSB0_DIR=\"c:/projects/libwdi/libusb-win32-bin-1.2.6.0\";LIBUSBK_DIR=\"c:/projects/libwdi/libusbK-3.0.7.0-bin/bin\"" /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+  - if [%COMPILER%]==[MinGW] C:\msys64\usr\bin\bash -lc "export PATH=/mingw%BITS%/bin:$PATH; cd /c/projects/libwdi; ./bootstrap.sh; ./configure --build=%PLATFORM%-w64-mingw32 --host=%PLATFORM%-w64-mingw32 --enable-toggable-debug --enable-examples-build --disable-debug --disable-shared %EXTRA_OPTS% --with-ddkdir=\"C:/Program Files (x86)/Windows Kits/10\" --with-wdfver=1011 --with-libusb0=\"C:/Projects/libwdi/libusb-win32-bin-1.2.6.0\" --with-libusbk=\"C:/Projects/libwdi/libusbK-3.0.7.0-bin/bin\"; make -j4"
